# Djangfolio

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml.example  pyproject.toml
.github/workflows/: codestyle.yaml  docker.yaml  testing.yaml
djangfolio/: manage.py
djangfolio/djangfolio/: context_processors.py  forms.py  settings.py  sitemaps.py  urls.py  views.py  wsgi.py
djangfolio/djangfolio/settings/: base.py  development.py  production.py
djangfolio/djangfolio/static/djangfolio/css/: base.css  base.css.map  base.scss  bootstrap.css  bootstrap.css.map  index.css
djangfolio/djangfolio/templates/djangfolio/: analytics.html  base.html  header.html  index.html
djangfolio/mail/templates/mail/email/: contact_mail.html
djangfolio/profiles/: apps.py  models.py
djangfolio/profiles/migrations/: 0002_profile_enable_contact_me.py  0003_auto_20200418_1734.py
nginx/conf.d/: djangfolio.conf  djangfolio.conf.example
resources/: entrypoint.sh
tests/: test_djangfolio.py
website/: manage.py
website/djangfolio/: forms.py  services.py  urls.py  views.py  wsgi.py
website/djangfolio/settings/: base.py  development.py  production.py
website/djangfolio/static/djangfolio/css/: base.css  bootstrap.css  bootstrap.css.map  index.css
website/djangfolio/static/djangfolio/css/bootstrap/: bootstrap-grid.css.map  (+1 more)
website/djangfolio/templates/djangfolio/: base.html  header.html  index.html
website/mail/: apps.py  services.py
website/mail/templates/mail/email/: contact_mail.txt
website/profiles/: admin.py  apps.py  models.py
website/profiles/migrations/: 0001_initial.py  0002_profile_enable_contact_me.py  0003_auto_20200418_1734.py  0004_auto_20220113_0808.py
(+7 files in other folders)
