[tool.poetry]
name = "djangfolio"
version = "0.1.0"
description = ""
authors = ["Lars van Rhijn <larsvanrhijn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.5"
pydocstyle = "^5.0.2"
black = "^19.10b0"
vulture = "^1.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
