[tool.poetry]
name = "djangfolio"
version = "0.1.0"
description = ""
authors = ["Lars van Rhijn <larsvanrhijn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.2.12"
pydocstyle = "^5.0.2"
black = "^19.10b0"
vulture = "^1.4"
Pillow = "^9.0.0"
django-recaptcha = "^2.0.6"
uwsgi = "^2.0.18"
psycopg2-binary = "^2.8.5"
django-robots = "^5.0"
coverage = "^5.1"
six = "^1.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
