[tool.poetry]
name = "djangfolio"
version = "0.1.0"
description = "A portfolio website"
authors = ["Lars van Rhijn <larsvanrhijn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.13"
uwsgi = "^2.0.22"
psycopg2-binary = "^2.8.6"
six = "^1.15.0"
django-recaptcha = "^3.0.0"
django-robots = "^5.0"
pillow = "^10.2.0"

[tool.poetry.dev-dependencies]
pydocstyle = "^6.1.1"
black = "^22.3.0"
flake8 = "^6.0.0"
coverage = "^6.5.0"

[tool.black]
line-length = 119
target-version = ["py311"]
exclude = '''
/(
  migrations
  | website/djangfolio/settings
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
